Bug 34244: Improve contrast in staff interface main page layered icons
This patch adjusts CSS for the staff interface home page so that there
is better contrast with Font Awesome icons which are layered. The
main advanced search and item search links have two icons layered one on
top of the other, and the "lower" one needs to have better contrast
after the staff interface redesign.

To test, apply the patch and rebuild the staff interface CSS. Log into
the staff interface and confirm that the advanced search and item search
link icons are clear and distinguishable from each other.

--- a/koha-tmpl/intranet-tmpl/prog/css/src/mainpage.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/mainpage.scss
@@ -62,7 +62,7 @@ ul {
                     }
 
                     .fa-stack-1x {
-                        color: #CCC;
+                        color: #626262;
                         font-size: .9em;
                         left: -5px;
                         top: -1px;
